# static_site_generator

./: .gitignore  README.rst  pyproject.toml  requirements.txt  run  ssg
example-site/: config.toml  index.md  tags.md
example-site/output/: index.html
example-site/output/posts/: sample1.html  sample2.html
example-site/posts/: sample1.md  sample2.md
example-site/tags/: example.md  first.md  second.md
example-site/templates/: base.html  page.html  tag.html  tag_index.html
static_site_gen/: __init__.py  __main__.py  admonition.py  build.py  cli.py  compile.py  config_structs.py  feed.py  globals.py
static_site_gen/mdExtensions/: meta.py
test-site/: data.toml  index.md
test-site/posts/: sample1.md  sample2.md
test-site/templates/: page.html
