[tool.poetry]
name = "static-site-gen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
markdown = "^3.2.1"
toml = "^0.10.0"
markdown_katex = "^202001.13b0"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
compile = "static_site_gen.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
